.k8s/infra/mongo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-db
  labels:
    app:  mongo-db
spec:
  selector:
    matchLabels:
      app: mongo-db
  replicas: 1
  template:
    metadata:
      labels:
        app:  mongo-db
    spec:
      containers:
      - name:  mongo-db
        image:  mongo:latest
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort:  27017
          name:  mongo-db
