.k8s/infra/mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
spec:
  selector:
    app: mongo-db
  type: ClusterIP
  ports:
  - name: mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
