.k8s/infra/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: default
spec:
  selector:
    app: mongo-express
  type: ClusterIP
  ports:
  - name: mongo-express
    protocol: TCP
    port: 8081
    targetPort: 8081
